--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,10 +1,432 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>User</title>
-</head>
-<body>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:https="http://www.w3.org/1999/xhtml">
 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
+
+    <title th:text="|Hello ${username}|"></title>
+
+    <style>
+        body {
+            font: 400 15px Lato, sans-serif;
+            line-height: 1.8;
+            color: #818181;
+        }
+
+        button {
+            background-color: deepskyblue;
+            color: white;
+        }
+
+        button:hover {
+            background-color: deeppink;
+        }
+
+        h1 {
+            color: deepskyblue;
+            padding: 20px 20px 20px 20px;
+        }
+
+        .jumbotron {
+            height: 680px;
+            color: #fff;
+            padding: 100px 25px;
+            font-family: Montserrat, sans-serif;
+            font-size: 60px;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+
+        .jumbotron p {
+            font-weight: bold;
+            padding-top: 250px;
+            color: cornflowerblue;
+        }
+
+        .jumbotron p span {
+            font-size: 60px;
+        }
+
+        .container-fluid {
+            padding: 60px 50px;
+        }
+
+        #top {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            overflow: hidden;
+            z-index: 99999;
+        }
+
+        .navbar {
+            -webkit-box-shadow: 0 8px 6px -6px #999;
+            -moz-box-shadow: 0 8px 6px -6px #999;
+            box-shadow: 0 8px 6px -6px #999;
+            background-color: deepskyblue;
+
+        }
+
+        .navbar-brand {
+            color: #fff;
+        }
+
+        .navbar-brand:hover {
+            color: deeppink;
+        }
+
+        .navbar-right ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar-right li {
+            display: inline-block;
+        }
+
+        .navbar-right li a {
+            padding: 14px 16px;
+            text-decoration: none;
+            color: #fff;
+            border-bottom: 3px solid transparent;
+        }
+
+        .navbar-right li a:hover {
+            color: deeppink;
+            background-color: white;
+        }
+
+        .active {
+            color: #503716;
+            border-bottom: #503716;
+            border-bottom: 3px solid #503716;
+        }
+
+        #welcome h1 {
+            color: deeppink;
+            padding: 20px 20px 20px 20px;
+            font-size: 48px;
+        }
+
+        #welcome h3 {
+            color: deeppink;
+        }
+
+        .icon {
+            font-size: 200px;
+            color: deepskyblue;
+        }
+
+        .icon-small {
+            color: deepskyblue;
+            font-size: 50px;
+        }
+
+        h2 {
+            font-size: 24px;
+            text-transform: uppercase;
+            color: #303030;
+            font-weight: 600;
+            margin-bottom: 30px;
+        }
+        h4 {
+            font-size: 19px;
+            line-height: 1.375em;
+            color: #303030;
+            font-weight: 400;
+            margin-bottom: 30px;
+        }
+
+        .bg-grey {
+            background-color: #f6f6f6;
+        }
+
+        #society h2 {
+            color: deepskyblue;
+        }
+
+        #society p{
+            color: deepskyblue;
+        }
+
+        #society h4 {
+            color: deeppink;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        #others ul table {
+            border: 1px solid deepskyblue;
+        }
+
+        #others ul table:hover {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
+
+        .searchPhoto {
+            max-width: 100%;
+            font-size: 100px;
+            text-align: center;
+        }
+
+        #envelope {
+            color: deepskyblue;
+        }
+
+        #envelope:hover {
+            color: deeppink;
+        }
+
+        #invitations a {
+            color: deepskyblue;
+        }
+
+        #invitations a:hover {
+            color: deeppink;
+            text-decoration: none;
+        }
+
+        #friends ul table {
+            border: 1px solid deepskyblue;
+            color: deepskyblue;
+        }
+
+        #friends ul table:hover {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            color: deeppink;
+            text-decoration: none;
+        }
+
+
+    </style>
+
+</head>
+<body id="body" data-spy="scroll" data-target=".navbar" data-offset="60">
+
+<!-- Nav bar -->
+<div class="navbar" id="top">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#j" style="font-weight: bold; font-size: 18px">SOCIETY</a>
+        </div>
+        <div class="nav navbar-nav navbar-right">
+            <ul>
+                <li><a href="#me">MY PROFILE</a></li>
+                <li><a href="#edit">EDIT</a></li>
+                <li><a href="#others">OTHERS</a></li>
+                <li><a href="#invitations">INVITATIONS</a></li>
+                <li><a href="#friends">FRIENDS</a></li>
+                <li><a href="#" th:href="@{/logout}">LOGOUT</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<br/>
+<br/>
+<!-- My Profile -->
+<div id="me" class="container-fluid" style="background-color: #fff;">
+    <div align="center">
+        <div class="row">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-user icon"></span>
+            </div>
+            <div class="col-sm-8">
+                <h1>My Profile</h1>
+                <table class="table" style="text-align: center; width: 50%;">
+                    <tbody th:each="detail : ${user}">
+                    <tr>
+                        <td th:text="|Username:|"></td>
+                        <td th:text="*{detail.username}"></td>
+                    </tr>
+                    <tr>
+                        <td th:text="|Email:|"></td>
+                        <td th:text="*{detail.email}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Edit -->
+<div id="edit" class="container-fluid bg-grey">
+    <div align="center">
+        <div class="row">
+            <div class="col-sm-8">
+                <h1>Edit My Profile</h1>
+                <div align="center">
+                    <form action="#" method="post" th:action="@{/editUser}" th:object="${user}" style="width: 50%">
+                        <input type="hidden" id="username" th:field="*{username}">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control" id="email" th:field="*{email}">
+                        </div>
+                        <button type="submit" class="btn btn-default">Save Changes</button>
+                        <button type="reset" class="btn btn-default">Cancel</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-pencil icon"></span>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Others -->
+<div id="others" class="container-fluid" style="background-color: #fff;">
+    <div align="center">
+        <div class="row">
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-search icon"></span>
+            </div>
+            <div class="col-sm-8">
+                <h1>Search Others</h1>
+                    <div align="center">
+                       <table width="80%">
+                           <tr>
+                               <td>
+                                    <form action="#" method="post" th:action="@{/searchByUsername}" th:object="${user}" style="width: 50%">
+                                        <div class="form-group">
+                                            <label for="searchByUsername">Search by username</label>
+                                            <input type="text" class="form-control" id="searchByUsername" placeholder="Enter username" name="username">
+                                        </div>
+                                        <button type="submit" class="btn btn-deafult">Search</button>
+                                    </form>
+                               </td>
+                                <td>
+                                    <form action="#" method="post" th:action="@{/searchAllUsers}" style="width: 50%">
+                                        <div class="form-group">
+                                            <p>Search all users</p>
+                                        </div>
+                                        <button type="submit" class="btn btn-deafult">Search All</button>
+                                    </form>
+                                </td>
+                           </tr>
+                       </table>
+                    </div>
+            </div>
+        </div>
+        <div class="row" align="center">
+                <ul style="padding-top: 50px" th:each="user : ${searchUsers}">
+                    <div class="col">
+                        <li>
+                                <table class="table" style="text-align: center">
+                                    <tbody>
+                                    <tr>
+                                        <td>
+                                            <div align="center">
+                                                <span class="glyphicon glyphicon-user searchPhoto"></span>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td th:text="|Username:|"></td>
+                                        <td th:text="*{user.username}"></td>
+                                    </tr>
+                                    <tr>
+                                        <td th:text="|Email:|"></td>
+                                        <td th:text="*{user.email}"></td>
+                                    </tr>
+                                    <tr>
+                                        <td th:text="|Send friend request:|"></td>
+                                        <td><a th:href="'/invite?id=' + ${user.id}"><span class="glyphicon glyphicon-envelope" id="envelope"></span></a></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                        </li>
+                    </div>
+                </ul>
+        </div>
+    </div>
+</div>
+
+<!-- Invitations -->
+<div id="invitations" class="container-fluid bg-grey">
+    <div align="center">
+        <div class="row">
+            <div class="col-sm-8">
+                <h1>Invitations</h1>
+                    <ul class="list-group" th:each="invitation : ${invitations}">
+                      <li class="list-group-item">
+
+                              <p>You get the friends request from <span th:text="${invitation.username}"></span></p>
+
+                            <a th:href="'/acceptRequest?id=' + ${invitation.id}" style="padding-left: 20px;">Accept     <span class="glyphicon glyphicon-ok"></span></a>
+
+                              <a th:href="'/declineRequest?id=' + ${invitation.id}"style="padding-left: 20px;">Decline     <span class="glyphicon glyphicon-remove"></span></a>
+
+                      </li>
+                    </ul>
+            </div>
+            <div class="col-sm-4">
+                <span class="glyphicon glyphicon-tag icon"></span>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Friends -->
+<div id="friends" class="container-fluid">
+    <div align="center">
+        <div class="row">
+            <div class="col">
+                <h1>Friends</h1>
+                <div class="row" align="center">
+                    <ul style="padding-top: 50px" th:each="friend : ${user.friends}">
+                        <div class="col">
+                            <li>
+                                <a th:href="'/other?username=' + ${friend.username}">
+                                    <table class="table" style="text-align: center">
+                                        <tbody>
+                                        <tr>
+                                            <td>
+                                                <div align="center">
+                                                    <span class="glyphicon glyphicon-user searchPhoto"></span>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td th:text="|Username:|"></td>
+                                            <td th:text="*{friend.username}"></td>
+                                        </tr>
+                                        <tr>
+                                            <td th:text="|Email:|"></td>
+                                            <td th:text="*{user.email}"></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </a>
+                            </li>
+                        </div>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer class="container-fluid text-center">
+
+</footer>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 </body>
-</html>
