--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -21,6 +21,15 @@
             color: #818181;
         }
 
+        button {
+            background-color: deepskyblue;
+            color: white;
+        }
+
+        button:hover {
+            background-color: deeppink;
+        }
+
         h1 {
             color: deepskyblue;
             padding: 20px 20px 20px 20px;
@@ -200,7 +209,7 @@
 
                         <div class="form-group">
                             <label for="password">Password</label>
-                            <input type="text" class="form-control" id="password" th:field="*{password}">
+                            <input type="password" class="form-control" id="password" th:field="*{password}">
                         </div>
                         <button type="submit" class="btn btn-default">Sign Up</button>
 
